# ESP32-based-Gesture-Recognition-Application

./: .env.example  .gitignore  README.md  pyproject.toml
firmware/: platformio.ini
firmware/include/: wifi_secrets.example.h
firmware/src/: main.cpp
scripts/: run.sh  verify.sh
src/gesture_mouse/: __init__.py  config.py  main.py
src/gesture_mouse/api/: app.py
src/gesture_mouse/core/: control.py  gestures.py  types.py
src/gesture_mouse/services/: capture.py  classifier.py  dataset.py  frame_buffer.py  hand_detector.py  mouse_backend.py  mouse_control.py  runtime.py  vision.py
src/gesture_mouse/training/: data.py  train.py
tests/: test_dataset.py  test_frame_buffer.py  test_hand_detector.py  test_health.py  test_mouse_control.py  test_stabilizer.py  test_training_data.py
