[project]
name = "esp32-gesture-mouse"
version = "0.1.0"
description = "ESP32-CAM OV3660 gesture recognition and macOS mouse control"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "mediapipe==0.10.21",
  "numpy>=1.26,<3",
  "opencv-contrib-python>=4.10,<6",
  "pillow>=10,<13",
  "pydantic-settings>=2.7,<3",
  "pyobjc-framework-applicationservices>=10.3,<13; sys_platform == 'darwin'",
  "python-multipart>=0.0.20,<1",
  "torch>=2.5,<3",
  "torchvision>=0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
training = [
  "matplotlib>=3.9,<4",
  "scikit-learn>=1.6,<2",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
gesture-mouse = "gesture_mouse.main:run"
gesture-train = "gesture_mouse.training.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gesture_mouse"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
